<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/iToolbarLogin"
        layout="@layout/item_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dimen_16dp">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutUsername"
            style="@style/DefaultInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtInputUsername"
                style="@style/DefaultEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_56dp"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutPassword"
            style="@style/DefaultInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtInputPassword"
                style="@style/DefaultEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_56dp"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                tools:text="Password" />

        </com.google.android.material.textfield.TextInputLayout>

        <ViewFlipper
            android:id="@+id/vfLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:insetTop="@dimen/dimen_0dp"
                android:insetBottom="@dimen/dimen_0dp"
                android:text="@string/login"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/pbRegister"
                style="?android:attr/progressBarStyleSmallInverse"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                tools:visibility="visible" />

        </ViewFlipper>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/dont_have_account"
            android:textAlignment="center"
            android:textColor="@android:color/black" />
    </LinearLayout>

</LinearLayout>
